--- a/index.html
+++ b/index.html
@@ -455,8 +455,15 @@
 					</nav>
 	  		</div>
 	  	</div>
+	  	<br>
 		<footer class="row bt1">
-			
+		<br>
+			<div class="col-xs-4 code">
+			    <div class="row">
+			        <div class="col-xs-12">Este site é Open Source e hospedado no <a href="#">GitHub</a>.</div>
+			        <div class="col-xs-12">Pacotes, sugestões e comentários são bem vindos.</div>
+			    </div>
+			</div>
 		</footer>
 	</div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
