Link Github no footer

--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
 		<br>
 			<div class="col-xs-4 code">
 			    <div class="row">
-			        <div class="col-xs-12">Este site é Open Source e hospedado no <a href="#">GitHub</a>.</div>
+			        <div class="col-xs-12">Este site é Open Source e hospedado no <a href="https://github.com/comandosgit/comandosgit.github.io" title="Comandos Git Open Source">GitHub</a>.</div>
 			        <div class="col-xs-12">Pacotes, sugestões e comentários são bem vindos.</div>
 			    </div>
 			</div>
