--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Comandos Git - Aprenda Git do básico ao avançado</title>
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
     <meta name="author" content="Rafael Corrêa Gomes">
-    <meta name="description" content="Comandos Git, aprenda Git do básico ao avançado com tutorial para Windows, Mac e Linux (Ubuntu) usando as principais ferramentas como GitHub, BitBucket e GitLab.">
+    <meta name="description" content="Comandos Git, aprenda Git do básico ao avançado com tutorial para Windows, Mac e Linux (Ubuntu) usando as principais ferramentas como GitHub, BitBucket e GitLab">
     <meta name="keywords" content="git branch, git commit, git remote, comandos git, github, git merge, windows, mac, bitbucket, git, linux, ubuntu, debian, controle de verão, git add, git pull, git push, git remote">
     <link rel="canonical" href="http://comandosgit.github.io/">
     <!-- Latest compiled and minified CSS -->
