--- a/index.html
+++ b/index.html
@@ -84,7 +84,29 @@
 							    </div>
 							</div>							
 							<div id="gitconfig">
-								<h4 class="col-xs-12">git config</h4>							
+								<h4 class="col-xs-12">git config</h4>	
+								<div class="col-xs-12">
+							        <!-- Nav tabs -->
+                                    <ul class="nav nav-tabs" role="tablist">
+                                      <li class="active"><a href="#gitconfig1" role="tab" data-toggle="tab"><h3>Básico</h3></a></li>                               
+                                    </ul>
+                                    <!-- Tab panes -->
+                                    <div class="tab-content">
+                                      <div class="tab-pane fade in active" id="gitconfig1">
+                                      <br>
+<h5>Sua Identidade</h5>
+<p>A primeira coisa que você deve fazer quando instalar o Git é definir o seu nome de usuário e endereço de e-mail. Isso é importante porque todos os commits no Git utilizam essas informações, e está imutavelmente anexado nos commits que você realiza:</p>
+<div class="well well-sm">$ git config --global user.name "John Doe"<br>
+$ git config --global user.email johndoe@example.com</div>
+<p>Relembrando, você só precisará fazer isso uma vez caso passe a opção --global, pois o Git sempre usará essa informação para qualquer coisa que você faça nesse sistema. Caso você queira sobrepor estas com um nome ou endereço de e-mail diferentes para projetos específicos, você pode executar o comando sem a opção --global quando estiver no próprio projeto.</p>
+<br>
+<h5>Ativando Cores</h5>
+<p>Para ativar as cores nas respostas de comandos, você pode utilizar o seguinte comando:</p>
+<div class="well well-sm">git config --global color.ui true</div>
+                                      </div>
+                                      
+                                      </div>                                      
+                                    </div>				
 							</div>
 							<div id="githelp">
 								<h4 class="col-xs-12">git help</h4>														
