--- a/index.html
+++ b/index.html
@@ -109,7 +109,24 @@ $ git config --global user.email johndoe@example.com</div>
                                     </div>				
 							</div>
 							<div id="githelp">
-								<h4 class="col-xs-12">git help</h4>														
+								<h4 class="col-xs-12">git help</h4>
+								<div class="col-xs-12">
+								    							        <!-- Nav tabs -->
+                                    <ul class="nav nav-tabs" role="tablist">
+                                      <li class="active"><a href="#githelp1" role="tab" data-toggle="tab"><h3>Básico</h3></a></li>
+                                    </ul>
+                                    <!-- Tab panes -->
+                                    <div class="tab-content">
+                                      <div class="tab-pane fade in active" id="githelp1">
+                                      <br>
+<h5>Obter Ajuda</h5>
+                                     <p>Se você precisar de ajuda ao usar Git, existem três maneiras de obter a ajuda para qualquer um dos comandos Git:</p><div class="well well-sm">$ git help {comando}<br>
+$ git {comando} --help<br>
+$ man git- {comando}</div>
+                                      </div>
+
+                                      </div>
+								</div>
 							</div>
 						</article>
 	                    <br>
