--- a/index.html
+++ b/index.html
@@ -218,6 +218,26 @@
     </div>
     <div id="gitclone">
         <h4 class="col-xs-12">git clone</h4>
+        <div class="col-xs-12">
+            <!-- Nav tabs -->
+            <ul class="nav nav-tabs" role="tablist">
+                <li class="active"><a href="#giticlone1" role="tab" data-toggle="tab"><h3>Clonando um Repositório Existente</h3></a></li>
+            </ul>
+            <!-- Tab panes -->
+            <div class="tab-content">
+                <div class="tab-pane fade in active" id="gitclone1">
+                    <br>
+
+                    <p>Você clona um repositório com <b>git clone [url]</b>. Por exemplo, caso você queria clonar a biblioteca Git do Ruby chamada Grit, você pode fazê-lo da seguinte forma:</p>
+
+                    <div class="well well-sm">git clone git://github.com/schacon/grit.git</div>
+                    <p>Se você entrar no novo diretório grit, você verá todos os arquivos do projeto nele, pronto para serem editados ou utilizados. Caso você queira clonar o repositório em um diretório diferente de grit, é possível especificar esse diretório utilizando a opção abaixo:</p>
+<div class="well well-sm">git clone git://github.com/schacon/grit.git mygrit</div>
+                    <p>Este comando faz exatamente a mesma coisa que o anterior, mas o diretório alvo será chamado <b>mygrit</b>.</p>
+                </div>
+            </div>
+
+        </div>
     </div>
 </article>
 <br>
