--- a/index.html
+++ b/index.html
@@ -382,6 +382,40 @@
     <div id="gitreset">
         <h4 class="col-xs-12">git reset</h4>
 
+        <div class="col-xs-12">
+            <!-- Nav tabs -->
+            <ul class="nav nav-tabs" role="tablist">
+                <li class="active"><a href="#gitreset1" role="tab" data-toggle="tab"><h3>Desfazendo Coisas</h3></a>
+                </li>
+            </ul>
+            <!-- Tab panes -->
+            <div class="tab-content">
+                <div class="tab-pane fade in active" id="gitreset1">
+                    <br/>
+
+                    <p>Em qualquer fase, você pode querer desfazer alguma coisa. Aqui, veremos algumas ferramentas
+                        básicas para desfazer modificações que você fez. Cuidado, porque você não pode desfazer algumas
+                        dessas mudanças. Essa é uma das poucas áreas no Git onde você pode perder algum trabalho se
+                        fizer errado. <br/>Para voltar ao último commit:</p>
+
+                    <div class="well well-sm">git reset --hard HEAD~1</div>
+                    <p>Para voltar ao último commit e mantém os últimos arquivos no Stage:</p>
+
+                    <div class="well well-sm">git reset --soft HEAD~1</div>
+                    <p>Volta para o commit com a hash XXXXXXXXXXX:</p>
+
+                    <div class="well well-sm">git reset --hard XXXXXXXXXXX</div>
+                    <h5>Recuperando commit apagado pelo git reset</h5>
+
+                    <p>Para visualizar os hashs:S</p>
+
+                    <div class="well well-sm">git reflog</div>
+                    <p>E para aplicar:</p>
+
+                    <div class="well well-sm">git merge {hash}</div>
+                </div>
+            </div>
+        </div>
     </div>
     <div id="gitrm">
         <h4 class="col-xs-12">git rm</h4>
