--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                     <div class="well well-sm">git reset --hard XXXXXXXXXXX</div>
                     <h5>Recuperando commit apagado pelo git reset</h5>
 
-                    <p>Para visualizar os hashs:S</p>
+                    <p>Para visualizar os hashs</p>
 
                     <div class="well well-sm">git reflog</div>
                     <p>E para aplicar:</p>
@@ -419,6 +419,32 @@
     </div>
     <div id="gitrm">
         <h4 class="col-xs-12">git rm</h4>
+
+        <div class="col-xs-12">
+            <!-- Nav tabs -->
+            <ul class="nav nav-tabs" role="tablist">
+                <li class="active"><a href="#gitrm1" role="tab" data-toggle="tab"><h3>Removendo Arquivos</h3></a>
+                </li>
+            </ul>
+            <!-- Tab panes -->
+            <div class="tab-content">
+                <div class="tab-pane fade in active" id="gitrm1">
+                    <br/>
+
+                    <p>Para remover um arquivo do Git, você tem que removê-lo dos arquivos que estão sendo monitorados
+                        (mais precisamente, removê-lo da sua área de seleção) e então fazer o commit. O comando <b>git
+                            rm</b> faz isso e também remove o arquivo do seu diretório para você não ver ele como
+                        arquivo não monitorado (untracked file) na próxima vez.
+                    </p>
+
+                    <div class="well well-sm">git rm -f {arquivo}</div>
+                    <p>Se você modificou o arquivo e já o adicionou na área de seleção, você deve forçar a remoção com a
+                        opção <b>-f</b>. Essa é uma funcionalidade de segurança para prevenir remoções acidentais de
+                        dados que ainda não foram gravados em um snapshot e não podem ser recuperados do Git.</p>
+
+                </div>
+            </div>
+        </div>
     </div>
     <div id="gitmv">
         <h4 class="col-xs-12">git mv</h4>
