--- a/index.html
+++ b/index.html
@@ -448,6 +448,36 @@
     </div>
     <div id="gitmv">
         <h4 class="col-xs-12">git mv</h4>
+
+        <div class="col-xs-12">
+            <!-- Nav tabs -->
+            <ul class="nav nav-tabs" role="tablist">
+                <li class="active"><a href="#gitmv1" role="tab" data-toggle="tab"><h3>Movendo Arquivos</h3></a>
+                </li>
+            </ul>
+            <!-- Tab panes -->
+            <div class="tab-content">
+                <div class="tab-pane fade in active" id="gitmv1">
+                    <br/>
+
+                    <p>Diferente de muitos sistemas VCS, o Git não monitora explicitamente arquivos movidos. <br/>É um
+                        pouco confuso que o Git tenha um comando <b>mv</b>. Se você quiser renomear um arquivo no Git,
+                        você pode fazer isso com</p>
+
+                    <div class="well well-sm">git mv arquivo_origem arquivo_destino</div>
+                    <p>e funciona. De fato, se você fizer algo desse tipo e consultar o status, você verá que o Git
+                        considera que o arquivo foi renomeado.</p>
+
+                    <p>No entanto, isso é equivalente a rodar algo como:</p>
+
+                    <div class="well well-sm">mv README.txt README <br/>git rm README.txt <br/>git add README</div>
+                    <p>O Git descobre que o arquivo foi renomeado implicitamente, então ele não se importa se você
+                        renomeou por este caminho ou com o comando <b>mv</b>. A única diferença real é que o comando <b>mv</b>
+                        é mais conveniente, executa três passos de uma vez. O mais importante, você pode usar qualquer
+                        ferramenta para renomear um arquivo, e usar add/rm depois, antes de consolidar com o commit.</p>
+                </div>
+            </div>
+        </div>
     </div>
 </article>
 <br>
