--- a/index.html
+++ b/index.html
@@ -522,6 +522,21 @@
     </div>
     <div id="gitcheckout">
         <h4 class="col-xs-12">git checkout</h4>
+        <div class="col-xs-12">
+            <!-- Nav tabs -->
+            <ul class="nav nav-tabs" role="tablist">
+                <li class="active"><a href="#gitcheckout1" role="tab" data-toggle="tab"><h3>Mudando de Branch</h3></a>
+                </li>
+            </ul>
+            <!-- Tab panes -->
+            <div class="tab-content">
+                <div class="tab-pane fade in active" id="gitcheckout1">
+                    <br/>
+                    <p>Com o <b>git checkout</b> você pode mudar de branch, caso a branch ainda não exista você poderá passar o parâmetro <b>-b</b> para criar.</p>
+                    <div class="well well-sm">git checkout -b {nome_da_branch}</div>
+                </div>
+            </div>
+        </div>
     </div>
     <div id="gitmerge">
         <h4 class="col-xs-12">git merge</h4>
