--- a/index.html
+++ b/index.html
@@ -540,6 +540,21 @@
     </div>
     <div id="gitmerge">
         <h4 class="col-xs-12">git merge</h4>
+        <div class="col-xs-12">
+            <!-- Nav tabs -->
+            <ul class="nav nav-tabs" role="tablist">
+                <li class="active"><a href="#gitmerge1" role="tab" data-toggle="tab"><h3>Merge Básico</h3></a>
+                </li>
+            </ul>
+            <!-- Tab panes -->
+            <div class="tab-content">
+                <div class="tab-pane fade in active" id="gitmerge1">
+                    <br/>
+                    <p>Suponha que você decidiu que o trabalho na tarefa #53 está completo e pronto para ser feito o merge no branch <b>master</b>. Para fazer isso, você fará o merge do seu branch <b>iss53</b>, bem como o merge do branch <b>hotfix</b> de antes. Tudo que você tem a fazer é executar o checkout do branch para onde deseja fazer o merge e então rodar o comando <b>git merge</b>:</p>
+                    <div class="well well-sm">git checkout master <br/>git merge iss53</div>
+                </div>
+            </div>
+        </div>
     </div>
     <div id="gitmergetool">
         <h4 class="col-xs-12">git mergetool</h4>
