--- a/index.html
+++ b/index.html
@@ -558,6 +558,23 @@
     </div>
     <div id="gitmergetool">
         <h4 class="col-xs-12">git mergetool</h4>
+        <div class="col-xs-12">
+            <!-- Nav tabs -->
+            <ul class="nav nav-tabs" role="tablist">
+                <li class="active"><a href="#gitmergetool1" role="tab" data-toggle="tab"><h3>Resolvendo conflitos</h3></a>
+                </li>
+            </ul>
+            <!-- Tab panes -->
+            <div class="tab-content">
+                <div class="tab-pane fade in active" id="gitmergetool1">
+                    <br/>
+                    <p>Se você quer usar uma ferramenta gráfica para resolver esses problemas, você pode executar o seguinte comando que abre uma ferramenta visual de merge adequada e percorre os conflitos. </p>
+                    <div class="well well-sm">git mergetool</div>
+                    <h5>Arquivos Temporários</h5>
+                    <p><b>git mergetool</b> cria <b>* .orig</b> arquivos de backup ao resolver fusões. Estes são seguros para remover uma vez que um arquivo foi fundida e sua <b>git mergetool</b> sessão foi concluída.</p>
+                </div>
+            </div>
+        </div>
     </div>
     <div id="gitlog">
         <h4 class="col-xs-12">git log</h4>
