--- a/index.html
+++ b/index.html
@@ -578,6 +578,20 @@
     </div>
     <div id="gitlog">
         <h4 class="col-xs-12">git log</h4>
+	<div class="col-xs-12">
+		<!-- Nav Tabs -->
+		<ul class="nav nav-tabs" role="tablist">
+			<li class="active"><a href="#gitlog1" role="tab" data-toggle="tab"><h3>Histórico de Commits</h3></a></li>
+		</ul>
+		<!-- Tab panes -->
+		<div class="tab-content">
+			<div class="tab-pane fade in active" id="gitlog1">
+				<br/>
+				<p>Depois que você tiver criado vários commits, ou se clonou um repositório com um histórico de commits existente, você provavelmente vai querer ver o que aconteceu. A ferramente mais básica e poderosa para fazer isso é o comando:</p>
+				<div class="well well-sm">git log</div>
+			</div>
+		</div>
+	</div>
     </div>
     <div id="gitstash">
         <h4 class="col-xs-12">git stash</h4>
