--- a/index.html
+++ b/index.html
@@ -566,8 +566,7 @@
                                 <div class="col-xs-12">
                                     <!-- Nav Tabs -->
                                     <ul class="nav nav-tabs" role="tablist">
-                                        <li class="active"><a href="#gitstash1" role="tab" data-toggle="tab"><h3>Fazendo Stash</h3></a>
-                                        </li>
+                                        <li class="active"><a href="#gitstash1" role="tab" data-toggle="tab"><h3>Fazendo Stash</h3></a></li>
                                     </ul>
                                     <!-- Tab panes -->
                                     <div class="tab-content">
@@ -586,6 +585,26 @@
                             </div>
                             <div id="gittag">
                                 <h4 class="col-xs-12">git tag</h4>
+                                <div class="col-xs-12">
+                                    <!-- Nav Tabs -->
+                                    <ul class="nav nav-tabs" role="tablist">
+                                        <li class="active"><a href="#gitstag1" role="tab" data-toggle="tab"><h3>Tagging</h3></a></li>
+                                    </ul>
+                                    <!-- Tab panes -->
+                                    <div class="tab-content">
+                                        <div class="tab-pane fade in active" id="gitstag1">
+                                            <br/>
+                                            <p>Git tem a habilidade de criar tags em pontos específicos na história do código como pontos importantes. Geralmente as pessoas usam esta funcionalidade para marcar pontos de release (v1.0, e por aí vai). Nesta seção, você aprenderá como listar as tags disponíveis, como criar novas tags, e quais são os tipos diferentes de tags. <br>Para listar as <b>tags</b> execute:</p>
+                                            <div class="well well-sm">
+                                                git tag
+                                            </div>
+                                            <p>Para criar uma <b>tag</b> basta executar o seguinte comando, caso não queira criar a <b>tag</b> anotada, somente retire os parâmetros <b>-a</b> e  <b>-m</b>.</p>
+                                            <div class="well well-sm">
+                                                git tag -a v1.4 -m 'my version 1.4'
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </article>
                         <br>
