--- a/index.html
+++ b/index.html
@@ -637,6 +637,23 @@
                             </div>
                             <div id="gitpull">
                                 <h4 class="col-xs-12">git pull</h4>
+	                            <div class="col-xs-12">
+		                            <!-- Nav Tabs -->
+		                            <ul class="nav nav-tabs" role="tablist">
+			                            <li class="active"><a href="#gitpull1" role="tab" data-toggle="tab"><h3>Atualizando local</h3></a>
+			                            </li>
+		                            </ul>
+		                            <!-- Tab panes -->
+		                            <div class="tab-content">
+			                            <div class="tab-pane fade in active" id="gitpull1">
+				                            <br/>
+				                            <p>Incorpora as alterações de um repositório remoto no branch atual. Em seu modo padrão, <b>git pull</b> é uma abreviação para <b>git fetch</b> seguido de git merge <b>FETCH_HEAD</b>. Por exemplo, se eu estiver em uma branch chamada <b>develop</b> e quiser atualizar caso haja atualizações remotamente:</p>
+				                            <div class="well well-sm">
+					                            git pull origin develop
+				                            </div>
+			                            </div>
+		                            </div>
+	                            </div>
                             </div>
                             <div id="gitpush">
                                 <h4 class="col-xs-12">git push</h4>
