Added server section
Added server section with icon and achors

--- a/index.html
+++ b/index.html
@@ -1018,6 +1018,15 @@
                                 </ul>
                             </li>
                             <li>
+                              <li>
+                                <a href="#server" class="server" title="Servidor"><b>Servidor</b></a>
+                                <ul class="nav">
+                                      <li><a href="#gitdaemon" title="git daemon">git daemon/a>
+                                      </li>
+                                      <li><a href="#gitupdateserverinfo" title="git update-server-info">git update-server-info</a>
+                                      </li>
+                                  </ul>
+                              </li>
                                 <a href="#plumbing" class="plumbing" title="Canalização de Código"><b>Canalização de Código</b></a>
                                 <ul class="nav">
                                     <li><a href="#gitcatfile" title="git cat-file">git cat-file</a>
