updated git push documentation

--- a/index.html
+++ b/index.html
@@ -598,6 +598,21 @@
 							</div>
                             <div class="col-xs-12">
                                 <h4 id="gitpush">git push</h4>
+								<!-- Nav Tabs -->
+								<ul class="nav nav-tabs" role="tablist">
+									<li class="active"><a href="#gitpush1" role="tab" data-toggle="tab"><h3>Empurrando seus commits</h3></a>
+									</li>
+								</ul>
+								<!-- Tab panes -->
+								<div class="tab-content">
+									<div class="tab-pane fade in active" id="gitpush1">
+										<br/>
+										<p>Empurrar é como você transferir commits a partir do seu repositório local a um repo remoto. É a contrapartida <b>git fetch</b>, mas que buscar importações compromete-se a agências locais, empurrando as exportações compromete-se a filiais remotas. Para fazer isso, você executar <b>git empurrar [alias] [ramo]</b>, que vai tentar fazer o seu [ramo] o novo [ramo] na [alias] remoto. Por exemplo, se eu quiser empurrar filial remota desenvolver:</p>
+										<div class="well well-sm">
+											git push origin develop
+										</div>
+									</div>
+								</div>                                
                             </div>
                             <div class="col-xs-12">
                                 <h4 id="gitremote">git remote</h4>
