--- a/index.html
+++ b/index.html
@@ -1036,6 +1036,13 @@
                     <div class="col-xs-12">Pacotes, sugestões e comentários são bem vindos.</div>
                 </div>
             </div>
+            <div class="col-xs-offset-2 col-xs-3">
+                <div class="row">
+                    <div class="col-xs-12">Developed by:<a href="https://github.com/rafaelstz" title="Rafael Corrêa Gomes">Rafael Corrêa Gomes</a>
+                    </div>
+                    <div class="col-xs-12">&copy;2016 <a href="http://comandosgit.github.io/">Comandosgit.github.io</a></div>
+                </div>
+            </div>
         </footer>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
