Added License file as well as HTML version of it. Added link to MIT license in index.html

--- a/index.html
+++ b/index.html
@@ -1041,6 +1041,7 @@
                     <div class="col-xs-12">Developed by:<a href="https://github.com/rafaelstz" title="Rafael Corrêa Gomes">Rafael Corrêa Gomes</a>
                     </div>
                     <div class="col-xs-12">&copy;2016 <a href="http://comandosgit.github.io/">Comandosgit.github.io</a></div>
+                    <div class="col-xs-12"><a href="/license.html">License MIT</a></div>
                 </div>
             </div>
         </footer>
