Correção para melhor entendimento do comando git push

--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
                                 <div class="tab-content">
                                     <div class="tab-pane fade in active" id="gitpush1">
                                         <br/>
-                                        <p>Empurrar é como você transferir commits a partir do seu repositório local a um repo remoto. É a contrapartida <b>git fetch</b>, mas que buscar importações compromete-se a agências locais, empurrando as exportações compromete-se a filiais remotas. Para fazer isso, você executar <b>git empurrar [alias] [ramo]</b>, que vai tentar fazer o seu [ramo] o novo [ramo] na [alias] remoto. Por exemplo, se eu quiser empurrar filial remota desenvolver:</p>
+                                        <p><b>O git push</b> é o comando em que você transfere commits a partir do seu repositório local para um repositório remoto. É a contrapartida do <b>git fetch</b>, que busca importações e comprometem as agências locais, utilizando o <b>git push</b> as exportações comprometem as filiais remotas. Para fazer isso, você executa <b>git push [nome_do_repositório_remoto] [nome_da_sua_branch_local]</b>, que vai tentar fazer que o <b>[nome_do_repositório_remoto]</b> receba a sua branch <b>[nome_da_sua_branch_local]</b> contendo todos seus commits com alterações. Por exemplo:</p>
                                         <div class="well well-sm">
                                             git push origin develop
                                         </div>
